--- a/posts/templates/blogposts.html
+++ b/posts/templates/blogposts.html
@@ -4,7 +4,7 @@
         <div class="row">
             <div class="col-md-2 col-sm-3 text-center">
                 <a class="story-img" href="#">
-                    <img src="/img/elizabeth.jpg" class="img-circle">
+                    <img src="media/img/elizabeth.jpg" class="img-circle">
                 </a>
                 <p><span class="boldtext">Author:</span> Elizabeth</p>
             </div>
