Added Heroku and Postgres support for deployment

--- a/posts/templates/postdetail.html
+++ b/posts/templates/postdetail.html
@@ -1,9 +1,10 @@
 {% extends "base.html" %}
+{% load static from staticfiles %}
 {% block content %}
     <div class="row">
         <div class="col-md-2 col-sm-3 text-center">
             <a class="story-img" href="#">
-                <img src="/media/img/elizabeth.jpg" class="img-circle">
+                <img src="{% static 'img/flowers.jpg' %}" class="img-circle">
             </a>
             <p><span class="boldtext">Author:</span> Elizabeth</p>
         </div>
