--- a/posts/templates/blogposts.html
+++ b/posts/templates/blogposts.html
@@ -1,10 +1,11 @@
 {% extends 'base.html' %}
+{% load static from staticfiles %}
 {% block content %}
     {% for post in posts %}
         <div class="row">
             <div class="col-md-2 col-sm-3 text-center">
                 <a class="story-img" href="#">
-                    <img src="media/img/elizabeth.jpg" class="img-circle">
+                    <img src="{% static 'img/pinkchair.jpg' %}" class="img-circle">
                 </a>
                 <p><span class="boldtext">Author:</span> Elizabeth</p>
             </div>
