--- a/templates/base.html
+++ b/templates/base.html
@@ -5,11 +5,13 @@
         <title>Stack - Bootcamp Blog</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.7/cerulean/bootstrap.min.css">
         <link rel="stylesheet" href="{% static 'css/custom.css' %}">
+        <link rel="stylesheet" href="{% static 'img/flowers.jpg' %}">
         <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
     </head>
     <body>
+        <header>
         <!-- Fixed masthead -->
         <nav class="navbar navbar-masthead navbar-default navbar-fixed-top">
             <div class="container">
@@ -21,7 +23,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="{% url 'get_posts' %}"><img src="/media/img/"></a>
+                    <a class="navbar-brand" href="{% url 'get_posts' %}"></a>
                     </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
@@ -30,16 +32,23 @@
                 </div>
             </div>
         </nav>
+        </header>
 
         <div id="masthead">
             <div class="container">
                 <div class="row">
-                    <h1> Elizabeth24602
+                    <h1> Elizabeth24602 <img src="{% static 'img/hat.jpg' %}" class="img-circle">
                         <p id="logo" class="lead">Web Designer</p>
                     </h1>
                 </div>
             </div>
         </div>
+        
+        <div class="row">
+   <div class="col-md-12">
+      <h5 class="blank">blank line</h5>
+   </div>
+</div>
     
         <div class="container">
             <div class="row">
