--- a/posts/templates/blogposts.html
+++ b/posts/templates/blogposts.html
@@ -5,7 +5,7 @@
         <div class="row">
             <div class="col-md-2 col-sm-3 text-center">
                 <a class="story-img" href="#">
-                    <img src="{% static 'img/pinkchair.jpg' %}" class="img-circle">
+                    <img src="{% static 'img/fur.jpg' %}" class="img-circle">
                 </a>
                 <p><span class="boldtext">Author:</span> Elizabeth</p>
             </div>
